force-app/main/default/objects/KimbleOne__TaskAssignment__c/KimbleOne__TaskAssignment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Task Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>TaskAssignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>