force-app/main/default/objects/KimbleOne__TaskAssignment__c/fields/KimbleOne__Task__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>KimbleOne__Task__c</referenceTo>
    <relationshipLabel>Task Assignments</relationshipLabel>
    <relationshipName>TaskAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>