force-app/main/default/objects/KimbleOne__TaskAssignment__c/fields/KimbleOne__TaskAssignmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskAssignmentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Assignment Template</label>
    <referenceTo>KimbleOne__TaskAssignmentTemplate__c</referenceTo>
    <relationshipLabel>Task Assignments</relationshipLabel>
    <relationshipName>TaskAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>